// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListHotelEstimates /> renders HotelEstimates page without crashing 1`] = `
<div>
  <div
    className="no-templates list-templates"
  >
    <div
      className="content no-estimates"
    >
      <img
        alt=""
        src="no-document.svg"
      />
      <p>
        No Hotel Estimates have been created
      </p>
    </div>
  </div>
</div>
`;

exports[`<NoHotelEstimates /> renders NoHotelEstimates page without crashing 1`] = `
<div
  className="no-templates list-templates"
>
  <div
    className="content no-estimates"
  >
    <img
      alt=""
      src="no-document.svg"
    />
    <p>
      No Hotel Estimates have been created
    </p>
  </div>
</div>
`;
